<?xml version="1.0"?>
<package>
  <name>alfred</name>
  <version>0.1.72</version>
  <description>This metapackage depends on package for common Alfred stack. This package is base of Alfred Assistant stack.</description>
  <maintainer email="mick.gaillard@gmail.com">Mickaël Gaillard</maintainer>
  <license>GPLv3</license>
  <author email="mick.gaillard@gmail.com">Mickaël Gaillard</author>
  <author email="erwan.lehuitouze@gmail.com">Erwan Le Huitouze</author>


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>alfred_launch</build_depend>
  <build_depend>media_model</build_depend>
  <build_depend>media_msgs</build_depend>
  <build_depend>media_msgs_java</build_depend>
  <build_depend>media_driver</build_depend>
  <build_depend>alfred_ia</build_depend>
  
  <run_depend>alfred_launch</run_depend>
  <run_depend>media_model</run_depend>
  <run_depend>media_msgs</run_depend>
  <run_depend>media_msgs_java</run_depend>
  <run_depend>media_driver</run_depend>
  <run_depend>alfred_ia</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
