<?xml version="1.0"?>
<package>
  <name>alfred</name>
  <version>0.1.88</version>
  <description>This metapackage depends on package for common Alfred stack. This package is base of Alfred Assistant stack.</description>

  <maintainer email="mick.gaillard@gmail.com">Mickaël Gaillard</maintainer>
  <maintainer email="erwan.lehuitouze@gmail.com">Erwan Le Huitouze</maintainer>
  <author email="mick.gaillard@gmail.com">Mickaël Gaillard</author>
  <author email="erwan.lehuitouze@gmail.com">Erwan Le Huitouze</author>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>media_model</build_depend>
  <build_depend>media_msgs</build_depend>
  <build_depend>media_msgs_java</build_depend>
  <build_depend>common_driver</build_depend>
  <build_depend>alfred_ia</build_depend>

  <run_depend>media_model</run_depend>
  <run_depend>media_msgs</run_depend>
  <run_depend>media_msgs_java</run_depend>
  <run_depend>common_driver</run_depend>
  <run_depend>alfred_ia</run_depend>

</package>
